# able-chat

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js
backend/: .env.example  .gitignore  README.md  app.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260402_0001_create_able_chat_tables.py
backend/src/: __init__.py
backend/src/able_chat/: __init__.py  auth.py  models.py  router.py  schemas.py  service.py
backend/src/auth/: router.py  schemas.py
backend/src/common/: __init__.py
backend/src/common/services/: __init__.py
backend/src/common/services/llm/: __init__.py  base.py  gemini_provider.py
backend/src/config/: __init__.py  secrets.py  settings.py
backend/src/database/: __init__.py  engine.py
src/: App.jsx  index.css  main.jsx
src/components/Auth/: ProtectedRoute.jsx
src/components/Dashboard/: ActionGrid.jsx  ChatInput.jsx  ChatSearchBar.jsx  ChatThread.jsx  HeroHeader.jsx
src/components/Sidebar/: SidebarNav.jsx
src/context/: AbleChatContext.jsx  AuthContext.jsx
src/layouts/: MainLayout.jsx
src/pages/Dashboard/: Dashboard.jsx
src/pages/Login/: Login.css  Login.jsx
src/services/: ableChatApi.js  authApi.js
